--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ejs": "^2.5.6",
     "express": "~4.15.2",
     "jade": "~1.11.0",
-    "morgan": "~1.8.1",
+    "morgan": "^1.8.2",
+    "nodemailer": "^4.0.1",
     "pug": "^2.0.0-rc.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
