--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pug": "^2.0.0-rc.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "redis": "^2.7.1",
     "serve-favicon": "~2.4.2",
     "webpack": "^2.5.1"
   },
