--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "serve-favicon": "~2.4.2",
     "simplemde": "^1.11.2",
     "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "style-loader": "^0.18.2",
     "webpack": "^2.5.1"
   },
